--- a/index.html
+++ b/index.html
@@ -42,15 +42,19 @@
     <!-- It can be useful for placement of information -->
     <div class="d-flex justify-content-center "  >
         <div class="container row p-3 my-3 border">
-            <div class="col-sm-3 pl-5 navbar-items"><a href="#home">Home</a></div>
+            <div class="col-sm-3 pl-5 navbar-items"> <img src="images/home.png" alt="Home Icon"> 
+                <a href="#home">Home</a></div>
 
-            <div class="col-sm-3 navbar-items"> <a href="#service">Services</a></div>
+            <div class="col-sm-3 navbar-items"> <img src="images/scissors.png" alt="Services Icon"> 
+                <a href="#service">Services</a></div>
             </a>
 
-            <div class="col-sm-3 navbar-items"> <a href="#book">Book Appointment</a></div>
+            <div class="col-sm-3 navbar-items"> <img src="images/booking.png" alt="Book Appointment Icon"> 
+                <a href="#book">Book Appointment</a></div>
 
 
-            <div class="col-sm-3 navbar-items"> <a href="#contact">Contact</a></div>
+            <div class="col-sm-3 navbar-items">  <img src="images/phone.png" alt="Contact Icon"> 
+                <a href="#contact">Contact</a></div>
 
         </div>
     </div>
@@ -89,19 +93,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Men's Haircut</td>
+                    <td>Men's Haircut <img src="images/men-haircut.png" alt="Men Haircut"> </td>
                     <td>CA $35</td>
                 </tr>
                 <tr>
-                    <td>Women's Haircut</td>
+                    <td>Women's Haircut <img src="images/women-haircut.png" alt="Women Haircut"> </td>
                     <td>CA $35</td>
                 </tr>
                 <tr>
-                    <td>Youth Haircut | Age: 12-17</td>
+                    <td>Youth Haircut | Age: 12-17 <img src="images/youth.png" alt="Youth Haircut"> </td>
                     <td>CA $30</td>
                 </tr>
                 <tr>
-                    <td>Children's Haircut | 11 & Under</td>
+                    <td>Children's Haircut | 11 & Under <img src="images/child.png" alt="Children Haircut"> </td>
                     <td>CA $25</td>
                 </tr>
             </tbody>
