--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseClientInfo title = "Your full name, email address, and phone number must be provided" >Your Contact
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseClientInfo" title = "Your full name, email address, and phone number must be provided" >Your Contact
                             Information</a>
                     </div>
                     <div id="collapseClientInfo" class="collapse" data-parent="#accordion">
@@ -286,7 +286,7 @@
 <!-- payment enter here for lab 5 requirem,etns  -->
 <div class="card">
     <div class="card-header">
-        <a class="collapsed card-link" data-toggle="collapse" href="#collapsePaymentInfo" title "Please ensure to pay using credit/debit card">Enter Payment Information</a>
+        <a class="collapsed card-link" data-toggle="collapse" href="#collapsePaymentInfo" title = "Please ensure to pay using credit/debit card">Enter Payment Information</a>
     </div>
     <div id="collapsePaymentInfo" class="collapse" data-parent="#accordion">
         <div class="card-body" id="services">
